compiler/tests/fail/arm-m4/bic_imm_too_large.jazz
export
fn main(reg u32 x) {
    x = #BIC(x, 0x0000caca);
    [x] = x;
}
